Closed Bug 1542907 Opened 5 years ago Closed 5 years ago

Should ignore multiple identical msids

Categories

(Core :: WebRTC: Signaling, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox68 --- fixed

People

(Reporter: jib, Assigned: bwc)

References

Details

Attachments

(2 files)

In #media on irc today, we ran into an SFU based on webrtc.org 72 sending multiple msid lines with identical mids.

The spec here says:

"For each MSID in msids, unless a MediaStream object has previously been created with that id for this connection, create a MediaStream object with that id."

followed by "Let streams be a list of the MediaStream objects created for this connection with the ids corresponding to msids."

I interpret this to mean we should ignore duplicate ids, both when creating objects and when assembling a list of the resultant objects in streams.

So we should probably ignore duplicate identical msids, if we see them. Seemed theoretical until it happened for real.

Assignee: nobody → docfaraday
Depends on: 1531803

Depends on D27116

Pushed by bcampen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/0f80cad005ba
Part 0: Add test-case for duplicate msids. r=jib
https://hg.mozilla.org/integration/autoland/rev/3f1fac8a763c
Part 1: Remove duplicate msids. r=mjf
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/16818 for changes under testing/web-platform/tests
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: