Bug 1542907 - Part 1: Remove duplicate msids. r=mjf

Differential Revision: https://phabricator.services.mozilla.com/D27117

--HG--
extra : moz-landing-system : lando